--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aiogram==2.25.1
 aiohttp==3.8.4
 aiosignal==1.3.1
+APScheduler==3.10.1
 async-timeout==4.0.2
 attrs==23.1.0
 Babel==2.9.1
@@ -12,4 +13,6 @@ magic-filter==1.0.9
 multidict==6.0.4
 python-decouple==3.8
 pytz==2023.3
+six==1.16.0
+tzlocal==5.0.1
 yarl==1.9.2
